# openevolve

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  MANIFEST.in  Makefile  README.md  openevolve-run.py  pyproject.toml  ruff.toml
.github/instructions/: sidebar-node-logic.instructions.md
configs/: README.md  cuda_optimization.yaml  default_config.yaml  discovery_mode_example.yaml  early_stopping_example.yaml  full_scientific_discovery.yaml  island_config_example.yaml  island_examples.yaml
docs/: DISCOVERY_MODE_ARCHITECTURE.md  META_PROMPTING_ARCHITECTURE.md  RL_ADAPTIVE_SELECTION_ARCHITECTURE.md
examples/: README.md
openevolve/: __init__.py  api.py  cli.py  config.py  controller.py  database.py  embedding.py  evaluation_result.py  evaluator.py  evolution_trace.py  init_project.py  interfaces.py  iteration.py  meta_prompting.py  process_parallel.py
scripts/: visualizer.py
tests/: test_api.py  test_artifacts.py  test_artifacts_integration.py  test_budget_and_phenotype.py  test_cascade_validation.py  test_checkpoint_resume.py  test_cli_model_override.py  test_code_utils.py  test_concurrent_island_access.py  test_database.py  test_database_cleanup.py  test_discovery.py  test_evaluator_timeout.py  test_evolution_trace.py  test_feature_stats_persistence.py  test_file_extension_preservation.py  test_grid_stability.py  test_heisenberg.py  test_hot_reload_config.py  test_init_project.py  test_island_isolation.py  test_island_map_elites.py  test_island_migration.py  test_island_parent_consistency.py  test_island_tracking.py  test_iteration_counting.py  test_llm_ensemble.py  test_map_elites_features.py  test_meta_prompting.py  test_migration_no_duplicates.py  test_novelty_asyncio_issue.py  test_novelty_parsing.py  test_openai_llm_empty_response_retry.py  test_openai_model_detection.py  test_process_parallel.py  test_process_parallel_fix.py  test_prompt_sampler.py  test_prompt_sampler_comprehensive.py  test_reasoning_effort_config.py  test_regional_endpoint.py  (+9 more)
(+333 files in other folders)
