[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openevolve"
version = "0.1.0"
description = "Open-source implementation of AlphaEvolve - an evolutionary coding agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "codelion"}
]
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "numpy>=1.22.0",
    "tqdm>=4.64.0",
    "flask>=2.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "mypy>=1.13.0",
    "requests>=2.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "mypy>=1.13.0",
    "requests>=2.28.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[project.scripts]
openevolve-run = "openevolve.cli:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external services"
]
addopts = "--strict-markers"

[tool.hatch.build.targets.wheel]
packages = ["openevolve"]

[tool.hatch.build.targets.sdist]
include = [
    "/openevolve",
    "/README.md",
    "/LICENSE",
]

[tool.bandit]
exclude_dirs = ["tests", "examples", "scripts"]
skips = ["B101", "B311"]  # Skip assert warnings and random for non-crypto

[tool.coverage.run]
source = ["openevolve"]
branch = true
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
